assets/css/screen.css
/* Table of Contents
/* ------------------------------------------------------------

This is a development CSS file which is built to a minified
production stylesheet in assets/built/screen.css

1.  Global Styles
2.  Layout
3.  Special Templates
4.  Site Header
  4.1 Home header
  4.2 Archive header
5.  Site Navigation
6.  Post Feed
7.  Single Post
  7.1. Post Byline
  7.2. Members Subscribe Form
  7.3. Comments
  7.4. Related Posts
  7.5. Koenig Styles
8.  Author Template
9.  Error Template
10. Subscribe Overlay
11. Site Footer
12. Custom rules for boo

*/


/* 1. Global - Set up the things
/* ---------------------------------------------------------- */
@import "global.css";

/* 12. Custom rules for boo
/* ---------------------------------------------------------- */
@import "boo.css";

body {
    background: #fff;
}

.img {
    display: block;
    width: 100%;
    height: 100%;
    background-position: center center;
    background-size: cover;
    border-radius: 100%;
}

.hidden {
    visibility: hidden;
    position: absolute;
    text-indent: -9999px;
}


/* 2. Layout - Page building blocks
/* ---------------------------------------------------------- */

.site-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.site-main {
    z-index: 100;
    flex-grow: 1;
}

/* Full width page blocks */
.outer {
    position: relative;
    padding: 0 5vw;
}

.site-main.outer {
    padding: 0;
}

/* Centered content container blocks */
.inner {
    margin: 0 auto;
    max-width: 1040px;
    width: 100%;
}

.inner.feature-image {
    margin-top: -200px;
}

/* Usage:

<div class="outer">
    <div class="inner">
        Centered content
    </div>
</div>

*/

/* 3. Special Template Styles
/* ---------------------------------------------------------- */

@media (min-width: 900px) {
    .home-template .post-feed,
    .tag-template .post-feed,
    .author-template .post-feed {
        padding: 40px 0 5vw;
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
    }

    .home-template .site-nav {
        position: relative;
    }
}


/* 4. Site Header
/* ---------------------------------------------------------- */

.site-header-background {
    position: relative;
    margin-top: 64px;
    padding-bottom: 12px;
    color: #fff;
    background: color(var(--darkgrey) l(-5%)) no-repeat center center;
    background-size: cover;
}

.site-header-background:before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 10;
    display: block;
    background: rgba(0,0,0,0.18);
}

.site-header-background:after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: auto;
    left: 0;
    z-index: 10;
    display: block;
    height: 140px;
    background: linear-gradient(rgba(0,0,0,0.15),rgba(0,0,0,0));
}

.site-header-background.no-image:before,
.site-header-background.no-image:after {
    display: none;
}

.site-header-content {
    z-index: 100;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 6vw 3vw;
    min-height: 200px;
    max-height: 340px;
}

.site-title {
    z-index: 10;
    margin: 0 0 0 -2px;
    padding: 0;
    font-size: 5.0rem;
    line-height: 1em;
    font-weight: 600;
}

.site-logo {
    max-height: 55px;
}

.site-description {
    z-index: 10;
    margin: 0;
    padding: 5px 0;
    font-size: 2.1rem;
    line-height: 1.4em;
    font-weight: 400;
    opacity: 0.8;
}

/* 4.1 Home header
/* ---------------------------------------------------------- */

.site-home-header {
    z-index: 1000;
}

.site-home-header .site-header-background {
    margin-top: 0;
}

.site-home-header .site-header-content {
    padding: 5vw 3vw 6vw;
}

.site-home-header .site-title {
    font-size: 5.5rem;
    text-align: center;
}

.site-home-header .site-description {
    font-size: 2.2rem;
    font-weight: 300;
}


/* 4.2 Archive header (tag and author post lists)
/* ---------------------------------------------------------- */

.site-archive-header .site-header-content {
    position: relative;
    align-items: stretch;
    padding: 12vw 0 20px;
    min-height: 200px;
    max-height: 600px;
}

.site-archive-header .no-image {
    padding-top: 0;
    padding-bottom: 0;
    color: var(--darkgrey);
    background: #fff;
    opacity: 1.0;
}

.site-archive-header .no-image .site-description {
    color: var(--midgrey);
    opacity: 1.0;
}


.site-archive-header .no-image .site-header-content {
    padding: 5vw 0 10px;
    border-bottom: 1px solid color(var(--lightgrey) l(+12%));
}


/* Special header styles for smaller screens */

@media (max-width: 900px) {
    .site-header-content {
        padding-bottom: 9vw;
    }
}

@media (max-width: 500px) {
    .site-home-header .site-title {
        font-size: 3.2rem;
    }

    .site-home-header .site-description {
        font-size: 1.8rem;
    }

    .site-archive-header .site-header-content {
        min-height: unset;
    }
}


/* 5. Site Navigation
/* ---------------------------------------------------------- */

.site-nav-main {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1000;
    background: color(var(--darkgrey) l(-5%));
}

.site-nav {
    position: relative;
    z-index: 100;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    overflow-y: hidden;
    height: 64px;
    font-size: 1.3rem;
}

.site-nav-left {
    flex: 1 0 auto;
    display: flex;
    align-items: center;
    overflow-x: auto;
    overflow-y: hidden;
    -webkit-overflow-scrolling: touch;
    margin-right: 10px;
    padding: 10px 0 80px;
    font-weight: 500;
    letter-spacing: 0.2px;
    text-transform: uppercase;
    white-space: nowrap;

    -ms-overflow-scrolling: touch;
}
/* ... */

